--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre Mim</h1>
-            <p class="apresentacao__conteudo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum perspiciatis minima neque? Aut recusandae distinctio animi numquam in officia dolorum at magnam temporibus rem provident voluptatibus, aspernatur, illo voluptas accusamus.</p>
-            <p class="apresentacao__conteudo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo unde incidunt quas ab fuga, nulla iure dolorem nesciunt voluptas totam mollitia. Autem dolores quaerat obcaecati qui ducimus nisi tempore saepe?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque itaque ut laudantium? Hic similique, necessitatibus provident illo nostrum delectus corporis earum distinctio amet cum suscipit quae dolores minus eligendi error.</p>
+            <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum perspiciatis minima neque? Aut recusandae distinctio animi numquam in officia dolorum at magnam temporibus rem provident voluptatibus, aspernatur, illo voluptas accusamus.</p>
+            <p class="apresentacao__conteudo__texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo unde incidunt quas ab fuga, nulla iure dolorem nesciunt voluptas totam mollitia. Autem dolores quaerat obcaecati qui ducimus nisi tempore saepe?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque itaque ut laudantium? Hic similique, necessitatibus provident illo nostrum delectus corporis earum distinctio amet cum suscipit quae dolores minus eligendi error.</p>
         </section>
         <img class="apresentacao__imagem" src="./assests/Imagem.png" alt="Foto da Joana Santos programando.">
         
